# hello-lto

./: Makefile  buildhelloa  dune  hello.install  hello.ml  hello.opam  main.ml
